// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordRequest should call resetPasswordRequest props for valid form submission 1`] = `
<div
  className="form-gap"
>
  <div
    className="container"
  >
    <div
      className="form-row text-center justify-content-center"
    >
      <div
        className="col-md-6 col-md-offset-4 border rounded"
      >
        <div
          className="panel panel-default"
        >
          <div
            className="panel-body"
          >
            <div
              className="text-center"
            >
              <h3>
                <i
                  className="fa fa-lock fa-4x"
                />
              </h3>
              <h2
                className="text-center"
              >
                Forgot Password?
              </h2>
              <p>
                Enter Your email address to get a password reset link
              </p>
              <div
                className="panel-body"
              >
                <form
                  autoComplete="off"
                  className="form"
                  id="register-form"
                  method="post"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    <TextField
                      className="form-control form-input"
                      field="email"
                      onChange={[Function]}
                      placeholder="enter your email"
                      type="email"
                      value="ugochukwu.ezeh@yahoo.com"
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    <input
                      className="btn btn-lg btn-block login-btn mt-4"
                      name="recover-submit"
                      type="submit"
                      value="Send email verification link"
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordRequest should call the dispatch mapped to the props 1`] = `
<ResetPasswordRequest
  resetPasswordRequest={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`ResetPasswordRequest should correctly render ResetPasswordRequestPage  1`] = `
<div
  className="form-gap"
>
  <div
    className="container"
  >
    <div
      className="form-row text-center justify-content-center"
    >
      <div
        className="col-md-6 col-md-offset-4 border rounded"
      >
        <div
          className="panel panel-default"
        >
          <div
            className="panel-body"
          >
            <div
              className="text-center"
            >
              <h3>
                <i
                  className="fa fa-lock fa-4x"
                />
              </h3>
              <h2
                className="text-center"
              >
                Forgot Password?
              </h2>
              <p>
                Enter Your email address to get a password reset link
              </p>
              <div
                className="panel-body"
              >
                <form
                  autoComplete="off"
                  className="form"
                  id="register-form"
                  method="post"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    <TextField
                      className="form-control form-input"
                      field="email"
                      onChange={[Function]}
                      placeholder="enter your email"
                      type="email"
                      value=""
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    <input
                      className="btn btn-lg btn-block login-btn mt-4"
                      name="recover-submit"
                      type="submit"
                      value="Send email verification link"
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordRequest should correctly render ResetPasswordRequestPage  2`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`ResetPasswordRequest should return error for invalid form submission 1`] = `
<div
  className="form-gap"
>
  <div
    className="container"
  >
    <div
      className="form-row text-center justify-content-center"
    >
      <div
        className="col-md-6 col-md-offset-4 border rounded"
      >
        <div
          className="panel panel-default"
        >
          <div
            className="panel-body"
          >
            <div
              className="text-center"
            >
              <h3>
                <i
                  className="fa fa-lock fa-4x"
                />
              </h3>
              <h2
                className="text-center"
              >
                Forgot Password?
              </h2>
              <p>
                Enter Your email address to get a password reset link
              </p>
              <div
                className="panel-body"
              >
                <form
                  autoComplete="off"
                  className="form"
                  id="register-form"
                  method="post"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    <TextField
                      className="form-control form-input"
                      error={
                        Array [
                          "This email field is required.",
                        ]
                      }
                      field="email"
                      onChange={[Function]}
                      placeholder="enter your email"
                      type="email"
                      value=""
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    <input
                      className="btn btn-lg btn-block login-btn mt-4"
                      name="recover-submit"
                      type="submit"
                      value="Send email verification link"
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordRequest should return error for invalid form submission 2`] = `
<div
  className="form-gap"
>
  <div
    className="container"
  >
    <div
      className="form-row text-center justify-content-center"
    >
      <div
        className="col-md-6 col-md-offset-4 border rounded"
      >
        <div
          className="panel panel-default"
        >
          <div
            className="panel-body"
          >
            <div
              className="text-center"
            >
              <h3>
                <i
                  className="fa fa-lock fa-4x"
                />
              </h3>
              <h2
                className="text-center"
              >
                Forgot Password?
              </h2>
              <p>
                Enter Your email address to get a password reset link
              </p>
              <div
                className="panel-body"
              >
                <form
                  autoComplete="off"
                  className="form"
                  id="register-form"
                  method="post"
                  onSubmit={[Function]}
                >
                  <div
                    className="form-group"
                  >
                    <TextField
                      className="form-control form-input"
                      error={
                        Array [
                          "This email field is required.",
                        ]
                      }
                      field="email"
                      onChange={[Function]}
                      placeholder="enter your email"
                      type="email"
                      value=""
                    />
                  </div>
                  <div
                    className="form-group"
                  >
                    <input
                      className="btn btn-lg btn-block login-btn mt-4"
                      name="recover-submit"
                      type="submit"
                      value="Send email verification link"
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
